update confirm the order in the frontend